--- a/index.html
+++ b/index.html
@@ -123,17 +123,26 @@
       </div>
       <div class="insta">
         Saiba mais sobre o @estudiokarlabruna
-        <div
-          loading="lazy"
-          data-mc-src="5d44d89b-f801-4967-bb8f-8c75e8b4a5db#instagram"
-        ></div>
+        <!-- SnapWidget -->
+        <!-- SnapWidget -->
+        <!-- SnapWidget -->
+        <!-- SnapWidget -->
+        <script src="https://snapwidget.com/js/snapwidget.js"></script>
+        <iframe
+          src="https://snapwidget.com/embed/979844"
+          class="snapwidget-widget"
+          allowtransparency="true"
+          frameborder="0"
+          scrolling="no"
+          style="border: none; overflow: hidden; width: 100%"
+        ></iframe>
       </div>
     </section>
     <footer>
       <div class="divider"><p>Fotografia feita para durar</p></div>
       <img src="./assets/img/logo_1.svg" alt="" />
     </footer>
-    <div id="instagram-feed"></div>
+    <div id="instagram-container"></div>
   </body>
   <script
     src="https://cdn2.woxo.tech/a.js#61d4daacd2aa11001685f2b7"
