--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <li class="menu__list-item">
               <a href="#" class="current">Home</a>
             </li>
-            <li class="menu__list-item"><a href="#">A fotógrafa</a></li>
+            <li class="menu__list-item">
+              <a href="./fotografa/">A fotógrafa</a>
+            </li>
             <!-- <li class="menu__list-item"> -->
             <img src="./assets/img/logo_2.svg" alt="" class="logo_header" />
             <!-- </li> -->
@@ -228,7 +230,6 @@
     <footer>
       <div class="divider"><p>Fotografia feita para durar</p></div>
     </footer>
-    <div id="instagram-container"></div>
   </body>
 
   <script
