--- a/fotografa/index.html
+++ b/fotografa/index.html
@@ -38,8 +38,8 @@
             <!-- <li class="menu__list-item"> -->
             <img src="../assets/img/logo_2.svg" alt="" class="logo_header" />
             <!-- </li> -->
-            <li class="menu__list-item"><a href="#">Como funciona</a></li>
-            <li class="menu__list-item"><a href="#">Contato</a></li>
+            <li class="menu__list-item"><a href="../como-funciona/">Como funciona</a></li>
+            <li class="menu__list-item"><a href="../#infos">Contato</a></li>
           </ul>
         </nav>
       </div>
