--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
   </head>
   <body>
     <header class="container">
@@ -40,8 +41,12 @@
             <!-- <li class="menu__list-item"> -->
             <img src="./assets/img/logo_2.svg" alt="" class="logo_header" />
             <!-- </li> -->
-            <li class="menu__list-item"><a href="#">Como funciona</a></li>
-            <li class="menu__list-item"><a href="#">Contato</a></li>
+            <li class="menu__list-item">
+              <a href="./como-funciona/">Como funciona</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#infos" data-scroll>Contato</a>
+            </li>
           </ul>
         </nav>
       </div>
